# zk-shard-template

./: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  main.rs  node.rs  proofs.rs  state.rs  tree.rs  tx.rs  webserver.rs
crates/sp1/: Cargo.toml
crates/sp1/src/: main.rs
